@@ -3,6 +3,7 @@ Sigil 0.7.2 TBD
     - Implement issue 1993: Find & Replace should have a Marked Text option.
     - Implement issue 2083: Enhance invalid OPF recovery.
     - Implement issue 2082: Improve performance of Book Browser refresh.
+    - Fix issue 2107: Heading not accepted due to split at end of file.
     - Fix issue 2110: Insert Special Character inserts wrong code for nnbsp.
     - Fix issue 2021: Importing UTF-16 encoded files results in empty file.
     - Fix issue 2088: Ctrl-click on text files does not work in Code View.
